[package]
name = "volans"
version = "0.1.0"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Tim Stuart <tstuart@nygenome.org>", "Bingjie Zhang <bzhang@nygenome.org>", "Rahul Satija <rsatija@nygenome.org>"]
edition = "2018"

[dependencies]
log = "0.4.11"
sprs = "0.9.2"
bio = "0.32.0"
clap = "2.33.3"
serde = "1.0.117"
bincode = "1.3.1"
itertools = "0.9.0"
bitvector = "0.1.5"
num-format = "0.4.0"
indicatif = "0.15.0"
quickersort = "3.0.1"
rust-htslib = "0.35.2"
pretty_env_logger = "0.4.0"

[dependencies.bwa]
git = "https://github.com/parazodiac/rust-bwa"

[dependencies.carina]
path = "/home/srivastavaa/parazodiac/Carina"