[package]
name = "flash"
version = "0.1.0"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Tim Stuart <tstuart@nygenome.org>", "Bingjie Zhang <bzhang@nygenome.org>", "Rahul Satija <rsatija@nygenome.org>"]
edition = "2018"

[dependencies]
log = "0.4.8"
bio = "0.31.0"
clap = "2.33.1"
rayon = "1.3.1"
serde = "1.0.115"
bincode = "1.3.1"
itertools = "0.9.0"
num-format = "0.4.0"
indicatif = "0.15.0"
rust-htslib = "0.32.0"
pretty_env_logger = "0.4.0"
libradicl = { git = "https://github.com/COMBINE-lab/alevin-fry", branch = "develop" }